Remove redundant error handling and use hapi-pino for logging

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "deepcopy": "^2.1.0",
     "hapi-auth-jwt2": "^10.2.0",
     "hapi-mongodb": "^9.0.3",
+    "hapi-pino": "^8.3.0",
     "hapi-swagger": "^13.1.0",
     "json2csv": "^5.0.6",
     "mongodb": "^3.6.10",
