--- a/config/manifest.js.dist
+++ b/config/manifest.js.dist
@@ -118,6 +118,13 @@ const manifest = {
       { plugin: '@hapi/inert' },
       { plugin: '@hapi/vision' },
       { plugin: '@hapi/nes' },
+      { plugin: 'hapi-pino',
+        options: {
+          logRequestComplete: false,
+          prettyPrint: process.env.NODE_ENV !== 'production',
+          redact: ['req.headers.authorization'],
+        }
+      },
       { plugin: './routes/api/v1/auth', options: {},
         routes: {
           prefix: envKey('prefix') + '/api/v1'
@@ -135,7 +142,7 @@ const manifest = {
       },
       { plugin: './routes/default', options: {},
         routes: {
-          prefix: envKey('prefix') 
+          prefix: envKey('prefix')
         }
       },
       { plugin: './routes/api/v1/event_aux_data', options: {},
