--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "deepcopy": "^2.0.0",
     "hapi-auth-jwt2": "^8.8.1",
     "hapi-mongodb": "^9.0.0",
+    "hapi-pino": "^8.3.0",
     "hapi-swagger": "^11.1.0",
     "json2csv": "^4.5.4",
     "mongodb": "^3.5.9",
