--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcryptjs": "^2.4.3",
     "check-disk-space": "^2.1.0",
     "deepcopy": "^2.1.0",
+    "escape-string-regexp": "^5.0.0",
     "hapi-auth-jwt2": "^10.2.0",
     "hapi-mongodb": "^9.0.3",
     "hapi-pino": "^8.3.0",
