change: Using lodash.escape library

--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "bcryptjs": "^2.4.3",
     "check-disk-space": "^2.1.0",
     "deepcopy": "^2.1.0",
-    "escape-string-regexp": "^5.0.0",
     "hapi-auth-jwt2": "^10.2.0",
     "hapi-mongodb": "^9.0.3",
     "hapi-pino": "^8.3.0",
     "hapi-swagger": "^13.1.0",
     "json2csv": "^5.0.6",
+    "lodash.escape": "^4.0.1",
     "mongodb": "^3.6.10",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12"
