--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "bcryptjs": "^2.4.3",
     "check-disk-space": "^2.1.0",
     "deepcopy": "^2.1.0",
-    "hapi-auth-jwt2": "^10.2.0",
+    "hapi-auth-jwt2": "~10.4.0",
     "hapi-mongodb": "^9.0.3",
     "hapi-pino": "^8.3.0",
     "hapi-swagger": "^13.1.0",
