--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sealog-server",
-  "version": "2.1.3",
+  "version": "2.2.0",
   "license": "MIT",
   "description": "Sealog event-logging server",
   "bugs": {
@@ -31,23 +31,23 @@
     "eventlogging"
   ],
   "dependencies": {
-    "@hapi/glue": "^7.0.0",
+    "@hapi/glue": "^8.0.0",
     "@hapi/good": "^9.0.1",
     "@hapi/good-console": "^9.0.1",
     "@hapi/good-squeeze": "^6.0.0",
-    "@hapi/hapi": "^19.2.0",
-    "@hapi/inert": "^6.0.3",
+    "@hapi/hapi": "^20.3.0",
+    "@hapi/inert": "^6.0.5",
     "@hapi/joi": "^17.1.1",
-    "@hapi/nes": "^12.0.4",
+    "@hapi/nes": "^14.0.0",
     "@hapi/vision": "^6.1.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "check-disk-space": "^2.1.0",
     "deepcopy": "^2.1.0",
-    "hapi-auth-jwt2": "~10.4.0",
+    "hapi-auth-jwt2": "^11.0.0",
     "hapi-mongodb": "^9.0.3",
     "hapi-pino": "^8.3.0",
-    "hapi-swagger": "^13.1.0",
+    "hapi-swagger": "^15.0.0",
     "json2csv": "^5.0.6",
     "lodash.escape": "^4.0.1",
     "mongodb": "^3.6.10",
