--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@hapi/good-squeeze": "^6.0.0",
     "@hapi/hapi": "^20.3.0",
     "@hapi/inert": "^6.0.5",
-    "@hapi/joi": "^17.1.1",
+    "joi": "^17.13.3",
     "@hapi/nes": "^14.0.0",
     "@hapi/vision": "^6.1.0",
     "axios": "^0.21.1",
