--- a/package.json
+++ b/package.json
@@ -55,13 +55,11 @@
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
-    "@hapi/code": "^8.0.3",
-    "@hapi/eslint-config-hapi": "^13.0.2",
-    "@hapi/eslint-plugin-hapi": "^4.3.6",
-    "@hapi/lab": "^22.0.5",
+    "@hapi/code": "^8.0.7",
+    "@hapi/eslint-plugin": "^5.1.0",
+    "@hapi/lab": "^26.0.0",
     "blipp": "^4.0.2",
-    "eslint": "^7.31.0",
-    "eslint-plugin-import": "^2.23.4",
-    "npm-run-all": "^4.1.5"
+    "eslint": "^9.20.1",
+    "eslint-plugin-import": "^2.31.0"
   }
 }
