--- a/package.json
+++ b/package.json
@@ -1,50 +1,52 @@
 {
   "name": "sealog-server",
-  "version": "2.1.3",
+  "version": "2.2.0",
   "license": "MIT",
   "description": "Sealog event-logging server",
   "bugs": {
     "url": "https://github.com/oceandatatools/sealog-server/issues"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   },
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "start-debug": "NODE_ENV=debug node server.js",
     "start-test": "lab -v **/*.test.js",
-    "start-devel": "NODE_ENV=development npm-run-all --parallel lint start:server",
+    "start-devel": "NODE_ENV=development node server.js",
     "start:server": "nodemon server.js",
     "lint": "eslint . --ext .js",
     "lint-fix": "eslint . --ext .js --fix"
   },
-  "author": "Webb Pinner",
-  "homepage": "https://github.com/oceandatatools/sealog-server",
+  "homepage": "https://github.com/WHOIGit/ndsf-sealog-server",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/oceandatatools/sealog-server.git"
+    "url": "https://github.com/WHOIGit/ndsf-sealog-server"
   },
   "keywords": [
     "hapi",
     "eventlogging"
   ],
   "dependencies": {
-    "@hapi/glue": "^7.0.0",
+    "@hapi/glue": "^8.0.0",
     "@hapi/good": "^9.0.1",
     "@hapi/good-console": "^9.0.1",
     "@hapi/good-squeeze": "^6.0.0",
-    "@hapi/hapi": "^19.2.0",
-    "@hapi/inert": "^6.0.3",
-    "@hapi/joi": "^17.1.1",
-    "@hapi/nes": "^12.0.4",
+    "@hapi/hapi": "^20.3.0",
+    "@hapi/inert": "^6.0.5",
+    "joi": "^17.13.3",
+    "@hapi/nes": "^14.0.0",
     "@hapi/vision": "^6.1.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "check-disk-space": "^2.1.0",
     "deepcopy": "^2.1.0",
-    "hapi-auth-jwt2": "~10.4.0",
+    "hapi-auth-jwt2": "^11.0.0",
     "hapi-mongodb": "^9.0.3",
     "hapi-pino": "^8.3.0",
-    "hapi-swagger": "^13.1.0",
+    "hapi-swagger": "^15.0.0",
     "json2csv": "^5.0.6",
     "lodash.escape": "^4.0.1",
     "mongodb": "^3.6.10",
@@ -52,13 +54,11 @@
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
-    "@hapi/code": "^8.0.3",
-    "@hapi/eslint-config-hapi": "^13.0.2",
-    "@hapi/eslint-plugin-hapi": "^4.3.6",
-    "@hapi/lab": "^22.0.5",
+    "@hapi/code": "^8.0.7",
+    "@hapi/eslint-plugin": "^5.1.0",
+    "@hapi/lab": "^26.0.0",
     "blipp": "^4.0.2",
-    "eslint": "^7.31.0",
-    "eslint-plugin-import": "^2.23.4",
-    "npm-run-all": "^4.1.5"
+    "eslint": "^9.20.1",
+    "eslint-plugin-import": "^2.31.0"
   }
 }
